@@ -14,6 +14,8 @@
 #include "gWellProperties.h"
 #include "Fragmentation.h"
 #include "ParseForPlugin.h"
+#include "MicroRate.h"
+#include "Tunneling.h"
 
 using namespace Constants;
 using namespace std;
@@ -422,5 +424,22 @@ namespace mesmer
     if (thresh < 0.0) { m_GrnFluxFirstNonZeroIdx = int(-thresh / getEnv().GrainSize); }
     else { m_GrnFluxFirstNonZeroIdx = 0; }
   }
+
+
+  // Wrapper function to calculate and grain average microcanoincal rate coeffcients.
+  bool ExchangeReaction::calcGrnAvrgMicroRateCoeffs() {
+
+    // Calculate microcanonical rate coefficients.
+    if (m_pMicroRateCalculator)
+      if (!m_pMicroRateCalculator->calculateMicroCnlFlux(this))
+        return false;
+
+    // Test grained microcanonical rate coefficients.
+    if (getFlags().microRateEnabled && !HighPresRateCoeffTest(m_ppPersist))
+      return false;
+
+    return true;
+  };
+
 
 }//namespace
