@@ -348,9 +348,8 @@ namespace mesmer
   void IsomerizationReaction::calcEffGrnThresholds(void){  // see the comments in
     double thresh = get_ThresholdEnergy();    // calcEffGrnThresholds under AssociationReaction.cpp
     double RxnHeat = getHeatOfReaction();
-    if (thresh < RxnHeat && string(m_pMicroRateCalculator->getID()) == string("MesmerILT")){
-      cerr << "E_infinity should be equal to or greater than the heat of reaction in ILT.";
-      exit(1);
+    if (thresh < RxnHeat){
+      throw(std::runtime_error(string("Reaction threshold should be equal to or greater than the heat of reaction.")));
     }
     int TS_en = this->get_fluxGrnZPE();
     int pdt_en = m_pdt1->getColl().get_grnZPE();
