@@ -14,6 +14,7 @@
 #include "../System.h"
 #include "../Spline.h"
 #include "../gDensityOfStates.h"
+#include "../MicroRate.h"
 
 using namespace std;
 using namespace Constants;
