@@ -13,6 +13,7 @@
 #include <string>
 #include "../System.h"
 #include "../gDensityOfStates.h"
+#include "../MicroRate.h"
 
 using namespace std;
 using namespace Constants;
