@@ -1,7 +1,12 @@
+2021-November-11 Struan Robertson
+
+		* Reaction.h/.cpp and all dervied classes and all classes derived from MicroRate.h
+		and Tunneling.h: Changes to rationalize header file inclusion.
+
 2021-November-09 Struan Robertson
 
 		* Reaction.h/.cpp, ExchangeReaction.h, IrreversibleExchangeReaction.h: Tidying-up of 
-		reaction class.
+		Reaction class.
 
 2021-November-08 Struan Robertson
 
